--- a/viewer.html
+++ b/viewer.html
@@ -116,6 +116,13 @@
               </button>
               <button
                 type="button"
+                class="rte-btn remove-format"
+                data-command="removeFormat"
+              >
+                T̶
+              </button>
+              <button
+                type="button"
                 class="rte-btn"
                 data-command="justifyRight"
                 title="محاذاة لليمين"
@@ -296,6 +303,13 @@
               </button>
               <button type="button" class="rte-btn" data-command="underline">
                 U
+              </button>
+              <button
+                type="button"
+                class="rte-btn remove-format"
+                data-command="removeFormat"
+              >
+                T̶
               </button>
               <button
                 type="button"
@@ -579,6 +593,13 @@
               </button>
               <button type="button" class="rte-btn" data-command="underline">
                 U
+              </button>
+              <button
+                type="button"
+                class="rte-btn remove-format"
+                data-command="removeFormat"
+              >
+                T̶
               </button>
               <button
                 type="button"
