--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>الاختبار التفاعلي - نسخة المعلم</title>
-
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <!-- خط -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
